--- a/contactinfo.html
+++ b/contactinfo.html
@@ -7,10 +7,10 @@
   <body>
     <h3>How to get in touch with me:</h3>
     <p>
-      <em>Phone Number:</em> 239.603.5841
+      <em>Phone Number:</em> Nope.
       </p>
     <p>
-      <em>Email Address:</em> milewhy.82@gmail.com
+      <em>Email Address:</em> Private.
       </p>
 <hr>
     <form action="mailto:milewhy.82@gmail.com" method="post" enctype="text/plain">
