--- a/contactinfo.html
+++ b/contactinfo.html
@@ -13,7 +13,8 @@
       <em>Email Address:</em> Private.
       </p>
 <hr>
-    <form action="mailto:milewhy.82@gmail.com" method="post" enctype="text/plain">
+    
+    <! Removing form action="" so people can't get my email...> 
       <label>Your Name:</label>
       <input type="text" name="yourName" value="">
       <br>
