--- a/htmlchallenge.html
+++ b/htmlchallenge.html
@@ -2,18 +2,7 @@
 
 <h1>HTML Challenge</h1>
 <br>
-<hr>
-<h2><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input">Link to MDN Documentation</a></h2>
-<table>
-    <tr>
-        <td>One</td>
-        <td>Two</td>
-    </tr>
-    <tr>
-        <td>Three</td>
-        <td>Four</td>
-    </tr>
-</table>
+Solution Removed. :P
 <br>
 <br>
 <a href="index.html">Back to Home!</a>
